fix for skeleton card height on mobile

--- a/src/pages/portfolio/portfolio.module.scss
+++ b/src/pages/portfolio/portfolio.module.scss
@@ -23,6 +23,12 @@
       width: 100%;
       position: relative;
 
+      span {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+
       &::after {
         content: '';
         display: block;
